apps/kavita/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kavita
  labels:
    inject-ca-bundle: "true"
