apps/kavita/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  namespace: kavita
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: kavita
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kavita
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: kavita
          image: ghcr.io/kareadita/kavita:0.9.0.2@sha256:880a8feff0833e860575f8e08788e4b4f59f8659afd17206566aae88a525130d  # yamllint disable-line rule:line-length
          ports:
            - name: http
              containerPort: 5000
          volumeMounts:
            - name: config
              mountPath: /kavita/config
            - name: library
              mountPath: /library
              readOnly: true
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 15
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: kavita-config
        - name: library
          persistentVolumeClaim:
            claimName: kavita-library
            readOnly: true
