apps/kavita/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: kavita
spec:
  selector:
    app.kubernetes.io/name: kavita
  ports:
    - name: http
      port: 5000
      targetPort: http
