apps/kavita/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kavita
  namespace: kavita
spec:
  parentRefs:
    - name: default
      namespace: gateway
      sectionName: kavita
  hostnames:
    - kavita.tomerhanochi.com
  rules:
    - backendRefs:
        - name: kavita
          port: 5000
